src/test/deca/context/invalid/op_bool_int.deca
//ERROR :5:
{
  int x=4;
  int y=7;
  int z= x || y;

}